# Interview

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wzjing/interview/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/wzjing/videoutil/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VideoEditorListener.cpp  VideoEditorListener.h  media-lib.cpp  native-lib.cpp
app/src/main/cpp/bgm/: mix_bgm.cpp
app/src/main/cpp/concat/: concat_add_title.cpp  concat_add_title.h
app/src/main/cpp/encoder/: encoder.cpp  encoder.h  x264_encode.cpp
app/src/main/cpp/filters/: audio_filter.cpp  video_filter.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/media/: CMakeLists.txt  filter.cpp  filter.h  media.cpp  mux_listener.cpp  mux_listener.h  muxer.cpp  muxer.h
app/src/main/cpp/mediautil/: audio_filter.cpp  bgm.cpp  bitmap_utils.cpp  bitmap_utils.h  concat.cpp  concat.h  log.cpp
app/src/main/cpp/remux/: remux.cpp  remux.h
app/src/main/cpp/utils/: CMakeLIsts.txt  bitmap_utils.cpp  bitmap_utils.h  error.h  io.cpp  jni_common.h  log.cpp  log.h
app/src/main/java/com/wzjing/interview/: App.java  EditActivity.java  LiveEncodeActivity.java  MainActivity.java  RecordActivity.java  ShotActivity.java  StreamActivity.java  TrackSelectionDialog.java  VideoEditor.java
app/src/main/java/com/wzjing/interview/audio/: AudioManager.java  AudioRecorder.java
app/src/main/java/com/wzjing/interview/camera/: CameraManager.java
app/src/main/java/com/wzjing/interview/encode/: AudioRecordTask.java  EncodeHandler.java  EncodeManager.java  EncodeThread.java  Encoder.java  FFmpegEncoder.java  MediaCodecEncoder.java  VideoEncodeTask.java  VideoTransformTask.java
app/src/main/java/com/wzjing/interview/jni/: TextFilter.java
app/src/main/java/com/wzjing/interview/muxer/: Muxer.java
app/src/main/java/com/wzjing/interview/record/: CameraManager.java  VideoRecorder.java
app/src/main/java/com/wzjing/videoutil/: EditActivity.java  MainActivity.java  ShotActivity.java  StreamActivity.java  VideoEditor.java
app/src/main/java/com/wzjing/videoutil/jni/: TextFilter.java
app/src/main/java/com/wzjing/videoutil/record/: CameraManager.java  VideoRecorder.java
app/src/main/res/drawable/: ic_camera.xml  ic_live_tv.xml  ic_movie.xml  selector_button_big.xml  selector_camera.xml  selector_live_tv.xml  selector_movie.xml
app/src/main/res/layout/: activity_edit.xml  activity_live_encode.xml  activity_main.xml  activity_record.xml  activity_shot.xml  activity_stream.xml  exo_controller_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v19/: styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/com/wzjing/interview/: ExampleUnitTest.java
app/src/test/java/com/wzjing/videoutil/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
